# small_string_optimization

./: .gitignore  .travis  LICENSE  README.md  appveyor.yml  build.py
code/: CMakeLists.txt
code/benchmarks/: CMakeLists.txt
code/benchmarks/src/: SmallStringOptimizationBenchmarks.cpp
code/inteface/SmallStringOptimization/: SimpleString.hpp  SmallStringOptimization.hpp
code/inteface/SmallStringOptimization/internal/: InternalHelper.hpp
code/tests/: CMakeLists.txt
code/tests/src/: SimpleStringTests.cpp  SmallStringiOptimizationTests.cpp
